--- a/style.css
+++ b/style.css
@@ -3,18 +3,44 @@
     padding: 0;
 }
 
+body {
+    background-color: rgba(155, 151, 151, 0.333);
+}
+
 header {
     background-color: black;
     color: aliceblue;
-    text-align: center;
-    height: 50px;
+    height: 60px;
+   
     
 }
 
 header li {
     color: aliceblue;
     text-decoration: none;
-    background-color: red;
     display: inline-flex;
-    
+    margin-top: 15px;
+    margin: 20px;
 }
+
+header ul {
+    text-align: center;
+}
+
+main h3 {
+    text-align: center;
+    margin: 170px;
+    background-color: red;
+    color: white;
+    text-shadow: ;
+}
+
+.hero {
+    border: 1px solid black;
+    height: 350px;
+    background-image: url(/image/arvoresolit.jfif);
+    background-size: cover;
+    background-position: center 50%;
+
+}
+
